# planning_controlling_simulation

./: .gitignore  LICENSE  README.md  dependency.bash  launch.bash
src/Components/: CMakeLists.txt  package.xml
src/Components/chassis/: chassis.cc  chassis.h
src/Components/common/config/: control_conf.pb.lattice.txt  control_conf.pb.parking.txt  flags.h  log_path_conf.h  path_01.txt  slot.json  timer.h
src/Components/common/math/: Bspline.cc  Bspline.h  aabox2d.cc  aabox2d.h  angle.cc  angle.h  box2d.cc  box2d.h  cartesian_frenet_conversion.cc  cartesian_frenet_conversion.h  clothoid_curve_g1.cc  clothoid_curve_g1.h  curve1d.h  discrete_points_math.cc  discrete_points_math.h  discretized_path.cc  discretized_path.h  euler_angles_zxy.h  integral.cc  integral.h  line_segment2d.cc  line_segment2d.h  linear_interpolation.cc  linear_interpolation.h  linear_quadratic_regulator.cc  linear_quadratic_regulator.h  local_outlier_factor.cc  local_outlier_factor.h  math_utils.cc  math_utils.h  matrix_operations.cc  matrix_operations.h  mpc_osqp.cc  mpc_osqp.h  path_matcher.cc  path_matcher.h  point_factory.h  polygon2d.cc  polygon2d.h  polynomial_curve1d.h  (+13 more)
src/Components/common/proto/: calibration_table.pb.cc  calibration_table.pb.h  calibration_table.proto  chassis.pb.cc  chassis.pb.h  chassis.proto  control_cmd.pb.cc  control_cmd.pb.h  control_cmd.proto  control_conf.pb.cc  control_conf.pb.h  control_conf.proto  decision.pb.cc  decision.pb.h  decision.proto  error_code.pb.cc  error_code.pb.h  error_code.proto  fem_pos_deviation.pb.cc  fem_pos_deviation.pb.h  fem_pos_deviation.proto  gain_scheduler_conf.pb.cc  gain_scheduler_conf.pb.h  gain_scheduler_conf.proto  geometry.pb.cc  geometry.pb.h  geometry.proto  header.pb.cc  header.pb.h  header.proto  lat_controller_conf.pb.cc  lat_controller_conf.pb.h  lat_controller_conf.proto  lattice_structure.pb.cc  lattice_structure.pb.h  lattice_structure.proto  leadlag_conf.pb.cc  leadlag_conf.pb.h  leadlag_conf.proto  localization.pb.cc  (+50 more)
src/Components/control/control/: dependency_injector.h  interpolation_1d.cc  interpolation_1d.h  interpolation_2d.cc  interpolation_2d.h  leadlag_controller.cc  leadlag_controller.h  mrac_controller.cc  mrac_controller.h  pid_controller.cc  pid_controller.h  read_proto.h  status.h  trajectory_analyzer.cc  trajectory_analyzer.h  vehicle_state_provider.cc  vehicle_state_provider.h
src/Components/control/controller/: controller.h  lat_controller.cc  lat_controller.h  lat_lon_controller.cc  lat_lon_controller.h  lon_controller.cc  lon_controller.h  mpc_controller.cc  mpc_controller.h  open_loop_controller.cc  open_loop_controller.h  simple_pid_lat_lon_controller.cc  simple_pid_lat_lon_controller.h  stanley_controller.cc  stanley_controller.h
src/Components/control/filters/: digital_filter.cc  digital_filter.h  digital_filter_coefficients.cc  digital_filter_coefficients.h  mean_filter.cc  mean_filter.h
src/Components/launch/: launch.launch
src/Components/nodes/chassis_node/: chassis_node.cc  chassis_node.h
src/Components/nodes/pc_node/: controlling_proc.cc  controlling_proc.h  deciders.cc  deciders.h  display.cc  display.h  pc_node.cc  pc_node.h  planning_proc.cc  planning_proc.h
src/Components/planning/common/: collision_checker.cc  collision_checker.h  constant_deceleration_trajectory1d.cc  constant_deceleration_trajectory1d.h  constant_jerk_trajectory1d.cc  constant_jerk_trajectory1d.h  constraint_checker1d.cc  constraint_checker1d.h  cruise_trajectory.cc  cruise_trajectory.h  discrete_points_reference_line_smoother.cc  discrete_points_reference_line_smoother.h  discretized_trajectory.cc  discretized_trajectory.h  iterative_anchoring_smoother.cc  iterative_anchoring_smoother.h  obstacle.cc  obstacle.h  piecewise_acceleration_trajectory1d.cc  piecewise_acceleration_trajectory1d.h  piecewise_jerk_trajectory1d.cc  piecewise_jerk_trajectory1d.h  point_factory.h  (+16 more)
src/Components/scripts/: display.py  draw_tools.py  obstacles_service.py
src/MSGs/: CMakeLists.txt  package.xml
src/MSGs/msg/: CarControlMsg.msg  Radar.msg  Slot.msg
src/MSGs/srv/: ObstacleService.srv
(+46 files in other folders)
